--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,6 @@ crashlytics-build.properties
 
 Assets/Firebase/Plugins/x86_64/FirebaseCppApp-8_8_0.so
 Assets/StreamingAssets/google-services-desktop.json
+Assets/StreamingAssets/google-services.json
+Assets/StreamingAssets/google-services.json.meta
+Assets/StreamingAssets/google-services-desktop.json.meta
